<resources>
    <string name="app_name">Cat Adventure Game</string>
    <string name="txtSplash">Cat Adventure Game</string>
    <string name="btnLivingRoom">Go To The Living Room</string>
    <string name="btnCon">Continue</string>
    <string name="imgPantry">Pantry Door Image</string>
    <string name="imgDead">Dead Owner Image</string>
    <string name="txtKitchen1">Meow... Meow...</string>
    <string name="txtKitchen2">It\'s time to eat, but you don\'t see your food anywhere.</string>
    <string name="txtExplanation">Choose an attack and lock in before the timer runs down"</string>
    <string name="btnLockIn">Attack</string>
    <string name="atk1">Claw: 9 - 15 DMG</string>
    <string name="atk2">Bite: 8 - 10 DMG</string>
    <string name="atk3">Swipe: 9 - 12 DMG</string>
    <string name="atk4">Hiss 2 - 20 DMG</string>
    <string name="gEnding">You have escaped and are free to start a new life. You cannot stop thinking about the nightmarish ordeal behind you, but at least you survived! You sniff the fresh air and wonder what adventures await you...</string>
    <string name="bEnding">Not only were you humiliated by a bunch of mice, but the shadowy figure that killed your owner has defeated you as well. What will become of you now?</string>
    <string-array name="roles">
        <item><string name="game_programmer_role">Game Programmers:</string></item>
        <item><string name="musician_role">Music by:</string></item>
        <item><string name="artist_role">Art by:</string></item>
        <item><string name="restart">Restart</string></item>
    </string-array>
    <string-array name="creators">
        <item>
            <string name="first_programmer"><a href="https://github.com/maict24">Jude Mai</a></string>
            <string name="sec_programmer"><a href="https://github.com/Shar3019">Sharri Brascher</a></string>
        </item>
        <item><string name="musician"><a href="https://www.youtube.com/c/BootsBeats">Ethan Hermann</a></string></item>
        <item><string name="artist"><a href="https://marketplace.roll20.net/browse/publisher/1943/willow">Aaron McGuire</a></string></item>
    </string-array>
</resources>