<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgKitchenPixel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/pixel" />

    <TextView
        android:id="@+id/txtKitchen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginBottom="537dp"
        android:text="@string/txtKitchen1"
        android:textSize="30sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnLivingRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="65dp"
        android:text="@string/btnLivingRoom"
        android:textSize="20sp"
        android:visibility="invisible" />


    <Button
        android:id="@+id/btnTrash"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="362dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/circle" />

    <Button
        android:id="@+id/btnCounter"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/circle" />

    <Button
        android:id="@+id/btnPantry"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="326dp"
        android:background="@drawable/circle" />

    <TextView
        android:id="@+id/txtKitchen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="19dp"
        android:text="@string/txtKitchen2"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="invisible" />

</RelativeLayout>